Erase all conflict files and start debbuging.