@@ -1,26 +1,26 @@
-package com.privateclinic.service.implementation;
+package com.privateclinic.service;
 
 import com.privateclinic.mapper.PatientMapper;
 import com.privateclinic.persistence.entities.Patient;
+import com.privateclinic.persistence.repository.PatientRepository;
 import com.privateclinic.presentation.dto.PatientDTO;
 import com.privateclinic.service.interfaces.PatientService;
 import jakarta.persistence.EntityNotFoundException;
-import jakarta.transaction.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import com.privateclinic.persistence.repository.PatientRepository;
-
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
-public class PatientServiceImpl implements PatientService {
+public class PatientServiceImp implements PatientService {
 
     private final PatientRepository patientRepository;
     private final PatientMapper patientMapper;
 
-    public PatientServiceImpl(PatientRepository patientRepository, PatientMapper patientMapper) {
+    @Autowired
+    public PatientServiceImp(PatientRepository patientRepository, PatientMapper patientMapper){
         this.patientRepository = patientRepository;
         this.patientMapper = patientMapper;
     }
@@ -30,7 +30,7 @@ public class PatientServiceImpl implements PatientService {
         return patientRepository.findAll()
                 .stream()
                 .map(patientMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -42,12 +42,11 @@ public class PatientServiceImpl implements PatientService {
     @Override
     public PatientDTO savePatient(PatientDTO patientDTO) {
         Patient patient = patientMapper.toEntity(patientDTO);
-        Patient savedPatient = patientRepository.save(patient);
-        return patientMapper.toDTO(savedPatient);
+        Patient savePatient = patientRepository.save(patient);
+        return patientMapper.toDTO(savePatient);
     }
 
     @Override
-    @Transactional
     public PatientDTO updatePatient(Long patientId, PatientDTO updatedPatientDTO) {
         Patient existingPatient = patientRepository.findById(patientId)
                 .orElseThrow(() -> new EntityNotFoundException("Patient not found with ID: " + patientId));
@@ -55,16 +54,16 @@ public class PatientServiceImpl implements PatientService {
 //        existingPatient.setName(updatedPatientDTO.getName());
 //        existingPatient.setHasMedicalInsurance(updatedPatientDTO.getHasMedicalInsurance());
 
-        Patient updatedPatient = patientRepository.save(existingPatient);
-        return patientMapper.toDTO(updatedPatient);
+        Patient updatePatient = patientRepository.save(existingPatient);
+
+        return patientMapper.toDTO(updatePatient);
     }
 
     @Override
-    @Transactional
     public void deletePatient(Long patientId) {
-        if (!patientRepository.existsById(patientId)) {
-            throw new EntityNotFoundException("Patient not found with ID: " + patientId);
-        }
-        patientRepository.deleteById(patientId);
+    if (!patientRepository.existsById(patientId)){
+        throw new EntityNotFoundException("Patient not found with ID " + patientId);
+    }
+    patientRepository.deleteById(patientId);
     }
 }
